<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".presentation.ui.detail.DetailScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/movie_background"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/kembali"
            android:src="@drawable/ic_close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imageMovie"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/foto_film"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_background"
            app:shapeAppearanceOverlay="@style/RoundedImageViews" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_detail"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline4">

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/judul_film"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/dummyJudul"
                android:textColor="@color/textColor"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/rating_film"
                android:fontFamily="@font/poppinsmedium"
                android:maxLines="1"
                android:text="@string/dummyRating"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_name" />

            <View
                android:id="@+id/batas"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="10dp"
                android:background="#FF0000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_rating" />

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/premis_film"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/dummyObverview"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/batas" />

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/dummyIsiObverview"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_overview" />

            <TextView
                android:id="@+id/tv_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppinsbold"
                android:text="@string/dummyDetail"
                android:textColor="@color/textColor"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_overview" />

            <LinearLayout
                android:id="@+id/layout_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail">

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/dummyPopularity"
                    android:textColor="@color/secondaryColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/movie_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/dummyIsiPopularity"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_rating">

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="@string/dummyMovieId"
                    android:textColor="@color/secondaryColor"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/movieId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:fontFamily="@font/poppinsmedium"
                    android:text="@string/dummyIsiMovieId"
                    android:textColor="@color/textColor"
                    android:textSize="12sp" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/favorite"
                android:layout_width="218dp"
                android:layout_height="57dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/background_button_shape"
                android:contentDescription="@string/simpan"
                android:fontFamily="@font/poppinsmedium"
                android:text="@string/buttonFavorite"
                android:textColor="@color/primaryColor"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_status" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="181dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>